<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="Heart_Beat">心跳时间:</string>
    <string name="Heart_Beat_Text">…</string>
    <string name="IP_Address">连接地址:</string>
    <string name="IP_Address_Text">…</string>
    <string name="WeChat_ID">微信:</string>
    <string name="WeChat_ID_Text">…</string>
    <string name="WebSocket_State">连接状态:</string>
    <string name="WebSocket_State_Text">…</string>
    <string name="WebSocket_Title">WebSocket信息</string>
    <string name="abc_action_bar_home_description">Navigate home</string>
    <string name="abc_action_bar_up_description">Navigate up</string>
    <string name="abc_action_menu_overflow_description">More options</string>
    <string name="abc_action_mode_done">Done</string>
    <string name="abc_activity_chooser_view_see_all">See all</string>
    <string name="abc_activitychooserview_choose_application">Choose an app</string>
    <string name="abc_capital_off">OFF</string>
    <string name="abc_capital_on">ON</string>
    <string name="abc_font_family_body_1_material">sans-serif</string>
    <string name="abc_font_family_body_2_material">sans-serif-medium</string>
    <string name="abc_font_family_button_material">sans-serif-medium</string>
    <string name="abc_font_family_caption_material">sans-serif</string>
    <string name="abc_font_family_display_1_material">sans-serif</string>
    <string name="abc_font_family_display_2_material">sans-serif</string>
    <string name="abc_font_family_display_3_material">sans-serif</string>
    <string name="abc_font_family_display_4_material">sans-serif-light</string>
    <string name="abc_font_family_headline_material">sans-serif</string>
    <string name="abc_font_family_menu_material">sans-serif</string>
    <string name="abc_font_family_subhead_material">sans-serif</string>
    <string name="abc_font_family_title_material">sans-serif-medium</string>
    <string name="abc_search_hint">Search…</string>
    <string name="abc_searchview_description_clear">Clear query</string>
    <string name="abc_searchview_description_query">Search query</string>
    <string name="abc_searchview_description_search">Search</string>
    <string name="abc_searchview_description_submit">Submit query</string>
    <string name="abc_searchview_description_voice">Voice search</string>
    <string name="abc_shareactionprovider_share_with">Share with</string>
    <string name="abc_shareactionprovider_share_with_application">Share with %s</string>
    <string name="abc_toolbar_collapse_description">Collapse</string>
    <string name="app_desc">Make you the master of your Wechat.</string>
    <string name="app_name">HDFramework</string>
    <string name="appbar_scrolling_view_behavior">android.support.design.widget.AppBarLayout$ScrollingViewBehavior</string>
    <string name="bottom_sheet_behavior">android.support.design.widget.BottomSheetBehavior</string>
    <string name="button_cancel">Cancel</string>
    <string name="button_clean_unread">Mark All as Read</string>
    <string name="button_hide_chatroom">Hide Useless Chatroom</string>
    <string name="button_hide_friend">Hide Friend</string>
    <string name="button_ok">Okay</string>
    <string name="button_select_all">All</string>
    <string name="button_sns_forward">Forward</string>
    <string name="button_sns_screenshot">Screenshot</string>
    <string name="button_unhide_chatroom">Unhide Chatroom</string>
    <string name="button_update">Update</string>
    <string name="character_counter_pattern">%1$d / %2$d</string>
    <string name="developer">Developer</string>
    <string name="donate">Donate</string>
    <string name="donate_alipay">Alipay</string>
    <string name="donate_wepay">Wechat Pay</string>
    <string name="down_queue">下行队列:</string>
    <string name="down_queue_count">下行：</string>
    <string name="down_queue_count_text">…</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="label_deleted">[Deleted]</string>
    <string name="label_unnamed">[Unnamed]</string>
    <string name="message">Message</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="password_toggle_content_description">Toggle password visibility</string>
    <string name="path_password_eye">M12,4.5C7,4.5 2.73,7.61 1,12c1.73,4.39 6,7.5 11,7.5s9.27,-3.11 11,-7.5c-1.73,-4.39 -6,-7.5 -11,-7.5zM12,17c-2.76,0 -5,-2.24 -5,-5s2.24,-5 5,-5 5,2.24 5,5 -2.24,5 -5,5zM12,9c-1.66,0 -3,1.34 -3,3s1.34,3 3,3 3,-1.34 3,-3 -1.34,-3 -3,-3z</string>
    <string name="path_password_eye_mask_strike_through">M2,4.27 L19.73,22 L22.27,19.46 L4.54,1.73 L4.54,1 L23,1 L23,23 L1,23 L1,4.27 Z</string>
    <string name="path_password_eye_mask_visible">M2,4.27 L2,4.27 L4.54,1.73 L4.54,1.73 L4.54,1 L23,1 L23,23 L1,23 L1,4.27 Z</string>
    <string name="path_password_strike_through">M3.27,4.27 L19.74,20.74</string>
    <string name="pref_category_chatting">Chatting</string>
    <string name="pref_category_database">Database Debug Options</string>
    <string name="pref_category_developer_miscellaneous">Miscellaneous</string>
    <string name="pref_category_interface">Interface</string>
    <string name="pref_category_settings_miscellaneous">Miscellaneous</string>
    <string name="pref_category_sns">Moments</string>
    <string name="pref_category_ui">UI Debug Options</string>
    <string name="pref_list_keyword_blacklist">Keyword Blacklist</string>
    <string name="pref_list_keyword_blacklist_summary">Separated by spaces. Don\'t make a long list on an old phone</string>
    <string name="pref_option_module_language">Language</string>
    <string name="pref_text_recall_prompt">Custom Recalling Prompt</string>
    <string name="pref_text_secret_friend_hide_option">Menu Text for Secret Friends</string>
    <string name="pref_text_secret_friend_hide_option_summary">After enabling Secret Friends, there will be a Hide Friend option when you long clicking a contact. You can change the text here for better effect.</string>
    <string name="pref_text_secret_friend_password">Password for Secret Friends</string>
    <string name="pref_text_select_photos_limit">Limit on Sending Photos</string>
    <string name="pref_toggle_auto_login">Toggle Auto Login</string>
    <string name="pref_toggle_auto_login_summary">Automatically agree any login requests from Wechat PC client (take your own risk).</string>
    <string name="pref_toggle_chatroom_hider">Enable Chatroom Hider</string>
    <string name="pref_toggle_chatroom_hider_summary">Hide the useless chatrooms into Chatroom Helper.</string>
    <string name="pref_toggle_database_delete">Trace Delete</string>
    <string name="pref_toggle_database_execute">Trace Execute</string>
    <string name="pref_toggle_database_insert">Trace Insert</string>
    <string name="pref_toggle_database_query">Trace Query</string>
    <string name="pref_toggle_database_update">Trace Update</string>
    <string name="pref_toggle_dump_popup_menu">Dump Popup Menu</string>
    <string name="pref_toggle_hide_icon">Hide Launcher Icon</string>
    <string name="pref_toggle_keyword_blacklist">Toggle Keyword Blacklist</string>
    <string name="pref_toggle_keyword_blacklist_summary">See goodbye to those PDA couples!</string>
    <string name="pref_toggle_mark_all_as_read">Toggle Mark All as Read</string>
    <string name="pref_toggle_prevent_comment_delete">Prevent Deleting Comments</string>
    <string name="pref_toggle_prevent_moment_delete">Prevent Deleting Moments</string>
    <string name="pref_toggle_prevent_recall">Prevent Recalling</string>
    <string name="pref_toggle_secret_friend">Enable Secret Friends</string>
    <string name="pref_toggle_sns_adblock">Block WeChat Advertisements</string>
    <string name="pref_toggle_touch_event">Trace Touch Events</string>
    <string name="pref_toggle_trace_activities">Trace Activities</string>
    <string name="pref_toggle_trace_files">Trace File Operations</string>
    <string name="pref_toggle_trace_logcat">Trace LogCat</string>
    <string name="pref_toggle_xml_parser">Trace XML Parser</string>
    <string name="prompt_alipay_not_found">Alipay Not Found</string>
    <string name="prompt_correct_password">Correct Password!</string>
    <string name="prompt_load_component_status_failed">Failed to retrieve the status of components.</string>
    <string name="prompt_message_recall">want to recall the message, idiot.</string>
    <string name="prompt_need_reboot">Take effect after reboot.</string>
    <string name="prompt_password_missing">Please set your password first!</string>
    <string name="prompt_screenshot">The screenshot has been saved to</string>
    <string name="prompt_setup_password">Enter new password</string>
    <string name="prompt_sns_invalid">Record is invalid or deleted.</string>
    <string name="prompt_update_discovered">Update Discovered</string>
    <string name="prompt_user_not_found">User Not Found!</string>
    <string name="prompt_verify_password">Enter your password</string>
    <string name="prompt_wait">Please wait for a while.....</string>
    <string name="prompt_wrong_password">Wrong Password!</string>
    <string name="search_menu_title">Search</string>
    <string name="settings">Settings</string>
    <string name="status">Status</string>
    <string name="status_bar_notification_info_overflow">999+</string>
    <string name="status_component_custom_scheme">URI Router Hijacking</string>
    <string name="status_component_database">SQLite Database Hijacking</string>
    <string name="status_component_invalid">Invalid</string>
    <string name="status_component_msg_storage">Message Storage Cache</string>
    <string name="status_component_resources">UI Resource Redirection</string>
    <string name="status_component_title">Component Details</string>
    <string name="status_component_valid">Valid</string>
    <string name="status_component_xml_parser">XML Parser Hijacking</string>
    <string name="status_error">The module isn\'t loaded, please check the Xposed framework.</string>
    <string name="status_ok">The module is loaded properly.</string>
    <string name="status_outdated_xposed">Current Xposed Framework is lower than 89.0; this may cause some unexpected crashes.</string>
    <string name="support">Support</string>
    <string name="support_github_logo">Github</string>
    <string name="support_github_mark">Github Mark</string>
    <string name="support_report_greetings">Dear Developer,\10The Xposed log and WechatPackage status has been attached. Currently my issue is:</string>
    <string name="support_report_subject">Wechat Xpwx Report</string>
    <string name="support_send_email">Email</string>
    <string name="title_secret_friend">Secret Friend</string>
    <string name="up_queue">上行队列:</string>
    <string name="up_queue_count">上行：</string>
    <string name="up_queue_count_text">…</string>
    <string name="view_about_project_github">GitHub: Gh0u1L5/WechatXpwx</string>
    <string name="view_about_project_github_url">https://github.com/Gh0u1L5/WechatXpwx</string>
</resources>
