<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android" xmlns:app="http://schemas.android.com/apk/res-auto" xmlns:aapt="http://schemas.android.com/aapt">
    <PreferenceCategory android:title="@string/pref_category_ui">
        <SwitchPreference android:title="@string/pref_toggle_touch_event" android:key="developer_ui_touch_event" android:defaultValue="false"/>
        <SwitchPreference android:title="@string/pref_toggle_trace_activities" android:key="developer_ui_trace_activities" android:defaultValue="false"/>
        <SwitchPreference android:title="@string/pref_toggle_dump_popup_menu" android:key="developer_ui_dump_popup_menu" android:defaultValue="false"/>
    </PreferenceCategory>
    <PreferenceCategory android:title="@string/pref_category_database">
        <SwitchPreference android:title="@string/pref_toggle_database_query" android:key="developer_database_query" android:defaultValue="false"/>
        <SwitchPreference android:title="@string/pref_toggle_database_insert" android:key="developer_database_insert" android:defaultValue="false"/>
        <SwitchPreference android:title="@string/pref_toggle_database_update" android:key="developer_database_update" android:defaultValue="false"/>
        <SwitchPreference android:title="@string/pref_toggle_database_delete" android:key="developer_database_delete" android:defaultValue="false"/>
        <SwitchPreference android:title="@string/pref_toggle_database_execute" android:key="developer_database_execute" android:defaultValue="false"/>
    </PreferenceCategory>
    <PreferenceCategory android:title="@string/pref_category_developer_miscellaneous">
        <SwitchPreference android:title="@string/pref_toggle_trace_logcat" android:key="developer_trace_logcat" android:defaultValue="false"/>
        <SwitchPreference android:title="@string/pref_toggle_trace_files" android:key="developer_trace_files" android:defaultValue="false"/>
        <SwitchPreference android:title="@string/pref_toggle_xml_parser" android:key="developer_xml_parser" android:defaultValue="false"/>
    </PreferenceCategory>
</PreferenceScreen>
