<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android" xmlns:app="http://schemas.android.com/apk/res-auto" xmlns:aapt="http://schemas.android.com/aapt" android:orientation="vertical" android:background="@color/card_background" android:layout_width="match_parent" android:layout_height="match_parent">
    <android.support.v7.widget.CardView android:layout_width="match_parent" android:layout_height="160dp" android:layout_marginTop="15dp" android:layout_marginStart="10dp" android:layout_marginEnd="10dp" app:cardCornerRadius="4dp" app:cardElevation="5dp">
        <ImageView android:id="@+id/status_image" android:background="@color/error" android:layout_width="match_parent" android:layout_height="110dp" android:src="@drawable/ic_status_error" android:contentDescription="@string/status_error"/>
        <TextView android:textStyle="bold" android:textColor="@color/error" android:gravity="center" android:id="@+id/status_text" android:paddingLeft="20dp" android:paddingRight="20dp" android:layout_width="match_parent" android:layout_height="50dp" android:layout_marginTop="110dp" android:text="@string/status_error"/>
    </android.support.v7.widget.CardView>
    <android.support.v7.widget.CardView android:layout_width="match_parent" android:layout_height="wrap_content" android:layout_marginTop="15dp" android:layout_marginStart="10dp" android:layout_marginEnd="10dp" app:cardCornerRadius="4dp" app:cardElevation="5dp">
        <LinearLayout android:orientation="vertical" android:layout_width="match_parent" android:layout_height="match_parent" android:layout_marginTop="6dp" android:layout_marginBottom="6dp" android:layout_marginStart="10dp" android:layout_marginEnd="10dp">
            <TextView android:textSize="14sp" android:textStyle="bold" android:textColor="@color/text_color" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="3dp" android:layout_marginBottom="3dp" android:text="@string/status_component_title"/>
            <LinearLayout android:gravity="center_vertical" android:orientation="horizontal" android:layout_width="match_parent" android:layout_height="match_parent">
                <TextView android:textColor="@color/text_color" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/status_component_msg_storage" android:layout_weight="1" android:layout_marginStart="10dp"/>
                <ImageView android:id="@+id/component_msg_storage_status" android:layout_width="wrap_content" android:layout_height="wrap_content" android:src="@drawable/ic_component_invalid" android:layout_weight="0" android:contentDescription="@string/status_component_invalid" android:layout_marginEnd="10dp"/>
            </LinearLayout>
            <LinearLayout android:gravity="center_vertical" android:orientation="horizontal" android:layout_width="match_parent" android:layout_height="match_parent">
                <TextView android:textColor="@color/text_color" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/status_component_resources" android:layout_weight="1" android:layout_marginStart="10dp"/>
                <ImageView android:id="@+id/component_resources_status" android:layout_width="wrap_content" android:layout_height="wrap_content" android:src="@drawable/ic_component_warn" android:layout_weight="0" android:contentDescription="@string/status_component_invalid" android:layout_marginEnd="10dp"/>
            </LinearLayout>
            <LinearLayout android:gravity="center_vertical" android:orientation="horizontal" android:layout_width="match_parent" android:layout_height="match_parent">
                <TextView android:textColor="@color/text_color" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/status_component_database" android:layout_weight="1" android:layout_marginStart="10dp"/>
                <ImageView android:id="@+id/component_database_status" android:layout_width="wrap_content" android:layout_height="wrap_content" android:src="@drawable/ic_component_invalid" android:layout_weight="0" android:contentDescription="@string/status_component_invalid" android:layout_marginEnd="10dp"/>
            </LinearLayout>
            <LinearLayout android:gravity="center_vertical" android:orientation="horizontal" android:layout_width="match_parent" android:layout_height="match_parent">
                <TextView android:textColor="@color/text_color" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/status_component_xml_parser" android:layout_weight="1" android:layout_marginStart="10dp"/>
                <ImageView android:id="@+id/component_xml_parser_status" android:layout_width="wrap_content" android:layout_height="wrap_content" android:src="@drawable/ic_component_invalid" android:layout_weight="0" android:contentDescription="@string/status_component_invalid" android:layout_marginEnd="10dp"/>
            </LinearLayout>
            <LinearLayout android:gravity="center_vertical" android:orientation="horizontal" android:layout_width="match_parent" android:layout_height="match_parent">
                <TextView android:textColor="@color/text_color" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/status_component_custom_scheme" android:layout_weight="1" android:layout_marginStart="10dp"/>
                <ImageView android:id="@+id/component_uri_router_status" android:layout_width="wrap_content" android:layout_height="wrap_content" android:src="@drawable/ic_component_invalid" android:layout_weight="0" android:contentDescription="@string/status_component_invalid" android:layout_marginEnd="10dp"/>
            </LinearLayout>
        </LinearLayout>
    </android.support.v7.widget.CardView>
    <android.support.v7.widget.CardView android:layout_width="match_parent" android:layout_height="wrap_content" android:layout_marginTop="15dp" android:layout_marginStart="10dp" android:layout_marginEnd="10dp" app:cardCornerRadius="4dp" app:cardElevation="5dp">
        <LinearLayout android:orientation="vertical" android:layout_width="match_parent" android:layout_height="match_parent" android:layout_marginTop="6dp" android:layout_marginBottom="10dp" android:layout_marginStart="10dp" android:layout_marginEnd="10dp">
            <TextView android:textSize="14sp" android:textStyle="bold" android:textColor="@color/text_color" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="3dp" android:layout_marginBottom="3dp" android:text="@string/WebSocket_Title"/>
            <LinearLayout android:orientation="horizontal" android:layout_width="match_parent" android:layout_height="match_parent">
                <TextView android:textColor="@color/text_color" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/IP_Address" android:layout_weight="1" android:layout_marginStart="10dp"/>
                <TextView android:textColor="@color/error" android:gravity="left" android:id="@+id/ip_text" android:layout_width="0dp" android:layout_height="wrap_content" android:text="@string/IP_Address_Text" android:layout_weight="3" android:layout_marginStart="10dp"/>
            </LinearLayout>
            <LinearLayout android:orientation="horizontal" android:layout_width="match_parent" android:layout_height="match_parent">
                <TextView android:textColor="@color/text_color" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/WebSocket_State" android:layout_weight="1" android:layout_marginStart="10dp"/>
                <TextView android:textColor="@color/error" android:gravity="left" android:id="@+id/WebSocket_TextView" android:layout_width="0dp" android:layout_height="wrap_content" android:text="@string/WebSocket_State_Text" android:layout_weight="3" android:layout_marginStart="10dp"/>
            </LinearLayout>
            <LinearLayout android:layout_width="match_parent" android:layout_height="match_parent">
                <TextView android:textColor="@color/text_color" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/Heart_Beat" android:layout_weight="1" android:layout_marginStart="10dp"/>
                <TextView android:textColor="@color/error" android:gravity="left" android:id="@+id/heart_beat" android:layout_width="0dp" android:layout_height="wrap_content" android:text="@string/Heart_Beat_Text" android:layout_weight="3" android:layout_marginStart="10dp"/>
            </LinearLayout>
        </LinearLayout>
    </android.support.v7.widget.CardView>
    <ScrollView android:id="@+id/svLog" android:layout_width="wrap_content" android:layout_height="wrap_content">
        <HorizontalScrollView android:id="@+id/hsvLog" android:layout_width="wrap_content" android:layout_height="wrap_content">
            <TextView android:id="@+id/txtLog" android:padding="8dp" android:layout_width="wrap_content" android:layout_height="wrap_content" android:textIsSelectable="true"/>
        </HorizontalScrollView>
    </ScrollView>
</LinearLayout>
